--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build-and-beautify": "webpack --mode production && html dist/*.html --indent-size 2 -n -p",
-    "beautify": "html dist/*.html --indent-size 2"
+    "beautify": "html dist/*.html --indent-size 2",
+    "start": "webpack serve --open"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +17,8 @@
     "html-webpack-plugin": "^5.3.1",
     "pug": "^3.0.2",
     "pug-loader": "^2.4.0",
-    "webpack": "^5.28.0",
-    "webpack-cli": "^4.6.0"
+    "webpack": "^5.30.0",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
